[package]
name = "CVE_2024_20356"
version = "0.1.0"
edition = "2021"
author = "William Moriarty"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
base64 = "0.22.1"
cbc = "0.1.2"
clap = { version = "4.5.4", features = ["derive"] }
elementtree = "1.2.3"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
httpmock = "0.7.0"
md-5 = "0.10.6"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
sha2 = "0.10.8"
